k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: reddit-clone-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reddit-clone-app
  template:
    metadata:
      labels:
        app: reddit-clone-app
  spec:
    containers:
    - name: reddit-clone-app
      image: ashfaque9x/reddit-clone-app:1.0.0-2
      resources:
        limits:
          cpu: "1"
        requests:
          cpu: "500m"
        ports:
        - containerPort: 3000
