k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-app-service
spec:
  selector:
    app: reddit-clone-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
