k8s/ingress.yaml
apiVersionn: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reddit-clone-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: reddit.dev.local   # Change to your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reddit-clone-service
            port:
              number: 80
